python/rregadmin/secdesc/sid_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -r ^Sid -r ^sid_.* -r ^sid_vals -o sid_wrapper.py sid_wrapper.xml'
from ctypes import *

from rregadmin.util.value_wrapper import guint8
from rregadmin.util.glib_wrapper import gint8
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.value_wrapper import guint32
STRING = c_char_p
from rregadmin.util.ustring_wrapper import gssize
from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.util.value_wrapper import GByteArray



# values for enumeration 'sid_vals'
SID_DEFAULT_REV = 1
SID_ERROR_REV = 255
SID_DEFAULT_ID = -1
SID_ERROR_ID = -2
SID_ERROR_AUTH_COUNT = -1
sid_vals = c_int # enum
# ../../../rregadmin/secdesc/sid.h 87
class Sid_(Structure):
    pass
Sid = Sid_
sid_rev = guint8
sid_auth_count = gint8
# ../../../rregadmin/secdesc/sid.h 107
sid_new = _libraries['librregadmin.so.1'].sid_new
sid_new.restype = POINTER(Sid)
# sid_new()
sid_new.argtypes = []
sid_new.__doc__ = \
"""Sid * sid_new()
../../../rregadmin/secdesc/sid.h:107"""
rid_type = guint32
# ../../../rregadmin/secdesc/sid.h 113
sid_new_id = _libraries['librregadmin.so.1'].sid_new_id
sid_new_id.restype = POINTER(Sid)
# sid_new_id(in_id)
sid_new_id.argtypes = [rid_type]
sid_new_id.__doc__ = \
"""Sid * sid_new_id(rid_type in_id)
../../../rregadmin/secdesc/sid.h:113"""
# ../../../rregadmin/secdesc/sid.h 121
sid_new_parse_sddl = _libraries['librregadmin.so.1'].sid_new_parse_sddl
sid_new_parse_sddl.restype = POINTER(Sid)
# sid_new_parse_sddl(in_str)
sid_new_parse_sddl.argtypes = [POINTER(STRING)]
sid_new_parse_sddl.__doc__ = \
"""Sid * sid_new_parse_sddl(unknown * * in_str)
../../../rregadmin/secdesc/sid.h:121"""
# ../../../rregadmin/secdesc/sid.h 129
sid_new_parse_sddl_quick = _libraries['librregadmin.so.1'].sid_new_parse_sddl_quick
sid_new_parse_sddl_quick.restype = POINTER(Sid)
# sid_new_parse_sddl_quick(in_str)
sid_new_parse_sddl_quick.argtypes = [STRING]
sid_new_parse_sddl_quick.__doc__ = \
"""Sid * sid_new_parse_sddl_quick(unknown * in_str)
../../../rregadmin/secdesc/sid.h:129"""
# ../../../rregadmin/secdesc/sid.h 137
sid_new_parse_binary = _libraries['librregadmin.so.1'].sid_new_parse_binary
sid_new_parse_binary.restype = POINTER(Sid)
# sid_new_parse_binary(in_data, in_size)
sid_new_parse_binary.argtypes = [POINTER(guint8), POINTER(gssize)]
sid_new_parse_binary.__doc__ = \
"""Sid * sid_new_parse_binary(unknown * in_data, gssize * in_size)
../../../rregadmin/secdesc/sid.h:137"""
# ../../../rregadmin/secdesc/sid.h 143
sid_copy = _libraries['librregadmin.so.1'].sid_copy
sid_copy.restype = POINTER(Sid)
# sid_copy(in_sid)
sid_copy.argtypes = [POINTER(Sid)]
sid_copy.__doc__ = \
"""Sid * sid_copy(unknown * in_sid)
../../../rregadmin/secdesc/sid.h:143"""
# ../../../rregadmin/secdesc/sid.h 149
sid_free = _libraries['librregadmin.so.1'].sid_free
sid_free.restype = gboolean
# sid_free(in_sid)
sid_free.argtypes = [POINTER(Sid)]
sid_free.__doc__ = \
"""gboolean sid_free(Sid * in_sid)
../../../rregadmin/secdesc/sid.h:149"""
# ../../../rregadmin/secdesc/sid.h 156
sid_get_rev = _libraries['librregadmin.so.1'].sid_get_rev
sid_get_rev.restype = sid_rev
# sid_get_rev(in_sid)
sid_get_rev.argtypes = [POINTER(Sid)]
sid_get_rev.__doc__ = \
"""sid_rev sid_get_rev(unknown * in_sid)
../../../rregadmin/secdesc/sid.h:156"""
# ../../../rregadmin/secdesc/sid.h 162
sid_get_id = _libraries['librregadmin.so.1'].sid_get_id
sid_get_id.restype = rid_type
# sid_get_id(in_sid)
sid_get_id.argtypes = [POINTER(Sid)]
sid_get_id.__doc__ = \
"""rid_type sid_get_id(unknown * in_sid)
../../../rregadmin/secdesc/sid.h:162"""
# ../../../rregadmin/secdesc/sid.h 168
sid_set_id = _libraries['librregadmin.so.1'].sid_set_id
sid_set_id.restype = gboolean
# sid_set_id(in_sid, in_id)
sid_set_id.argtypes = [POINTER(Sid), rid_type]
sid_set_id.__doc__ = \
"""gboolean sid_set_id(Sid * in_sid, rid_type in_id)
../../../rregadmin/secdesc/sid.h:168"""
# ../../../rregadmin/secdesc/sid.h 174
sid_get_subauth_count = _libraries['librregadmin.so.1'].sid_get_subauth_count
sid_get_subauth_count.restype = sid_auth_count
# sid_get_subauth_count(in_sid)
sid_get_subauth_count.argtypes = [POINTER(Sid)]
sid_get_subauth_count.__doc__ = \
"""sid_auth_count sid_get_subauth_count(unknown * in_sid)
../../../rregadmin/secdesc/sid.h:174"""
# ../../../rregadmin/secdesc/sid.h 180
sid_push_subauth = _libraries['librregadmin.so.1'].sid_push_subauth
sid_push_subauth.restype = gboolean
# sid_push_subauth(in_sid, in_auth)
sid_push_subauth.argtypes = [POINTER(Sid), rid_type]
sid_push_subauth.__doc__ = \
"""gboolean sid_push_subauth(Sid * in_sid, rid_type in_auth)
../../../rregadmin/secdesc/sid.h:180"""
# ../../../rregadmin/secdesc/sid.h 186
sid_pop_subauth = _libraries['librregadmin.so.1'].sid_pop_subauth
sid_pop_subauth.restype = gboolean
# sid_pop_subauth(in_sid)
sid_pop_subauth.argtypes = [POINTER(Sid)]
sid_pop_subauth.__doc__ = \
"""gboolean sid_pop_subauth(Sid * in_sid)
../../../rregadmin/secdesc/sid.h:186"""
# ../../../rregadmin/secdesc/sid.h 192
sid_get_subauth = _libraries['librregadmin.so.1'].sid_get_subauth
sid_get_subauth.restype = rid_type
# sid_get_subauth(in_sid, in_index)
sid_get_subauth.argtypes = [POINTER(Sid), gint8]
sid_get_subauth.__doc__ = \
"""rid_type sid_get_subauth(unknown * in_sid, gint8 in_index)
../../../rregadmin/secdesc/sid.h:192"""
# ../../../rregadmin/secdesc/sid.h 198
sid_get_last_subauth = _libraries['librregadmin.so.1'].sid_get_last_subauth
sid_get_last_subauth.restype = rid_type
# sid_get_last_subauth(in_sid)
sid_get_last_subauth.argtypes = [POINTER(Sid)]
sid_get_last_subauth.__doc__ = \
"""rid_type sid_get_last_subauth(unknown * in_sid)
../../../rregadmin/secdesc/sid.h:198"""
# ../../../rregadmin/secdesc/sid.h 204
sid_compare = _libraries['librregadmin.so.1'].sid_compare
sid_compare.restype = c_int
# sid_compare(sid1, sid2)
sid_compare.argtypes = [POINTER(Sid), POINTER(Sid)]
sid_compare.__doc__ = \
"""int sid_compare(unknown * sid1, unknown * sid2)
../../../rregadmin/secdesc/sid.h:204"""
# ../../../rregadmin/secdesc/sid.h 210
sid_equal = _libraries['librregadmin.so.1'].sid_equal
sid_equal.restype = gboolean
# sid_equal(sid1, sid2)
sid_equal.argtypes = [POINTER(Sid), POINTER(Sid)]
sid_equal.__doc__ = \
"""gboolean sid_equal(unknown * sid1, unknown * sid2)
../../../rregadmin/secdesc/sid.h:210"""
# ../../../rregadmin/secdesc/sid.h 216
sid_to_binary = _libraries['librregadmin.so.1'].sid_to_binary
sid_to_binary.restype = POINTER(GByteArray)
# sid_to_binary(in_sid)
sid_to_binary.argtypes = [POINTER(Sid)]
sid_to_binary.__doc__ = \
"""GByteArray * sid_to_binary(unknown * in_sid)
../../../rregadmin/secdesc/sid.h:216"""
# ../../../rregadmin/secdesc/sid.h 222
sid_write_to_binary = _libraries['librregadmin.so.1'].sid_write_to_binary
sid_write_to_binary.restype = gboolean
# sid_write_to_binary(in_sid, in_arr)
sid_write_to_binary.argtypes = [POINTER(Sid), POINTER(GByteArray)]
sid_write_to_binary.__doc__ = \
"""gboolean sid_write_to_binary(unknown * in_sid, GByteArray * in_arr)
../../../rregadmin/secdesc/sid.h:222"""
# ../../../rregadmin/secdesc/sid.h 228
sid_to_sddl = _libraries['librregadmin.so.1'].sid_to_sddl
sid_to_sddl.restype = STRING
# sid_to_sddl(sid)
sid_to_sddl.argtypes = [POINTER(Sid)]
sid_to_sddl.__doc__ = \
"""unknown * sid_to_sddl(unknown * sid)
../../../rregadmin/secdesc/sid.h:228"""
# ../../../rregadmin/secdesc/sid.h 237
sid_allocation_count = _libraries['librregadmin.so.1'].sid_allocation_count
sid_allocation_count.restype = guint32
# sid_allocation_count()
sid_allocation_count.argtypes = []
sid_allocation_count.__doc__ = \
"""guint32 sid_allocation_count()
../../../rregadmin/secdesc/sid.h:237"""
Sid_._fields_ = [
    # ../../../rregadmin/secdesc/sid.h 87
]
__all__ = ['SID_ERROR_AUTH_COUNT', 'sid_new_id', 'sid_rev',
           'SID_DEFAULT_REV', 'sid_vals', 'rid_type', 'Sid',
           'sid_push_subauth', 'sid_to_sddl', 'SID_ERROR_REV',
           'sid_new_parse_sddl_quick', 'sid_pop_subauth',
           'sid_auth_count', 'sid_get_rev', 'sid_set_id',
           'sid_allocation_count', 'sid_get_last_subauth', 'sid_new',
           'sid_new_parse_sddl', 'sid_equal', 'SID_DEFAULT_ID',
           'sid_compare', 'sid_get_subauth', 'sid_free', 'Sid_',
           'sid_to_binary', 'sid_write_to_binary',
           'sid_new_parse_binary', 'sid_get_id', 'SID_ERROR_ID',
           'sid_copy', 'sid_get_subauth_count']
